# Speed-Run

./: .env.example  .pre-commit-config.yaml  DEMO_FLOW_VIDEO.md  DEMO_SETUP_AND_EXECUTION.md  INTEGRATION_AND_TESTING_COMPLETE.md  INTEGRATION_TASKS_REMAINING.md  LIBRARY_INDEX.md  PRESENTATION_OUTLINE.md  PROJECT_REQUIREMENTS.md  QUICKSTART.md  README.md  TASKS_REMAINING_BY_SYSTEM.md  docker-compose.yml  package-lock.json  start-backend.bat  start-backend.sh  start-frontend.bat  start-frontend.sh
.github/workflows/: backend-ci.yml  docker-compose.yml  frontend-ci.yml  pre-commit.yml
backend/: .dockerignore  .env.example  .gitignore  AGENTIC_WORKFLOWS_DESIGN.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  Challenge_Crosscheck.md  Dockerfile  ENGINEERING_PRINCIPLES.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  PHASE_1_COMPLETE.md  PHASE_6_TESTING_SUMMARY.md  Part1_Real_Time_AML_Monitoring.md  Part2_Document_Image_Corroboration.md  README.md  SESSION_SUMMARY_2025-11-02.md  SETUP_GUIDE.md  STRUCTURE_REORGANIZATION_SUMMARY.md  TESTING_BEST_PRACTICES.md  TESTING_SESSION_COMPLETE.md  TEST_RUN_SUMMARY.md  docker-compose.yml  image_analysis.py  pyproject.toml  pytest.ini  requirements.txt  test.py  test_run_output.txt
backend/archive/: README.md
backend/archive/old_implementation/: __init__.py  ai_image_detector.py  main.py  reverse_image_search.py
backend/archive/old_implementation/agents/: base_agent.py  document_forensics.py  orchestrator.py  regulatory_watcher.py  transaction_analyst.py
backend/archive/old_implementation/api/routes/: alerts.py  audit.py  transactions.py  websocket.py
backend/archive/old_implementation/models/: schemas.py
backend/archive/old_implementation/services/: database.py  mock_data.py
backend/docs/architecture/: Integration_Strategy.md  database_schema.md
backend/docs/progress/: CRITICAL_FIXES_SUMMARY.md  Completion_Status_Report.md  PHASE_1_2_COMPLETION_SUMMARY.md  PHASE_2_COMPLETE.md  PHASE_3_IMPLEMENTATION_SUMMARY.md  PHASE_4_PERFORMANCE_OPTIMIZATION.md  PHASE_5_API_ENHANCEMENT.md  progress_notes.md
backend/docs/testing/: TESTING_PROGRESS_SUMMARY.md  TEST_FIXES_COMPLETE.md
backend/src/backend/: config.py  container.py  dependencies.py  main.py
backend/src/backend/adapters/: __init__.py
backend/src/backend/adapters/document_parser/: __init__.py  docling.py  jigsawstack_example.py  protocol.py
backend/src/backend/adapters/image/: __init__.py  pillow.py  protocol.py
backend/src/backend/adapters/nlp/: __init__.py  protocol.py  spacy.py
backend/src/backend/cache/: README.md  __init__.py  base.py  decorator.py  decorators.py  keys.py  manager.py  memory_backend.py  redis_backend.py
backend/src/backend/database/: __init__.py  connection.py  models.py  schema.sql  session.py
backend/src/backend/logging/: __init__.py  audit.py  config.py  context.py  middleware.py
backend/src/backend/routers/: __init__.py  alerts.py  corroboration.py  document_parser.py  ocr.py
backend/src/backend/schemas/: __init__.py  alert.py  document.py  image_analysis.py  ocr.py  validation.py
backend/src/backend/services/: __init__.py  alert_service.py  corroboration_service.py  document_service.py  document_validator.py  image_analyzer.py  ocr_service.py  report_generator.py  risk_scorer.py
backend/src/backend/services/image_analysis/: __init__.py  ai_detector.py  forensic_analyzer.py  metadata_analyzer.py  tampering_detector.py
backend/src/backend/services/validation/: __init__.py  content_validator.py  format_validator.py  structure_validator.py
backend/tests/: README.md  conftest.py
backend/tests/integration/: conftest.py  test_alert_service_integration.py  test_forensic_analysis_pipeline.py
backend/tests/integration/cache/: test_cache_manager.py  test_memory_backend.py
backend/tests/unit/: conftest.py
backend/tests/unit/adapters/: test_document_parser.py  test_image_processor.py  test_nlp_processor.py
backend/tests/unit/services/: test_alert_service.py  test_content_validator.py  test_document_service.py  test_format_validator.py  test_tampering_detector.py
docs/: DOCUMENTATION_INDEX_OLD.md
docs/architecture/: API_CONTRACT_ANALYSIS.md  ARCHITECTURE.md  TECHNICAL_ARCHITECTURE_DOCUMENT.md
docs/frontend/: BUILD_COMPLETE_SUMMARY.md  DRAG_DROP_KANBAN_SUMMARY.md  FINAL_BUILD_SUMMARY.md  FRONTEND_ARCHITECTURE_ANALYSIS.md  KANBAN_BOARD_SUMMARY.md  RM_DASHBOARD_SUMMARY.md
docs/guides/: API_INTEGRATION_GUIDE.md  CONFIGURATION_MANAGEMENT_COMPLETE.md  IMAGE_ANALYSIS_COMPARISON.md  QUICK_START_GUIDE.md
docs/progress/: COMPLETION_STATUS_TRACKER.md  IMAGE_INTEGRATION_PROGRESS.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_STATUS.md  PROJECT_SUMMARY.md  REFACTORING_IMPLEMENTATION_GUIDE.md  REFACTORING_PROGRESS.md  REFACTORING_SUMMARY.md  WORK_PROGRESS_TRACKER.md
docs/requirements/: PART_1_REAL_TIME_AML_MONITORING.md  PART_2_DOCUMENT_IMAGE_CORROBORATION.md  PART_3_INTEGRATION_UNIFIED_PLATFORM.md  PRODUCT_REQUIREMENTS_DOCUMENT.md
docs/sessions/: SESSION_FINAL_SUMMARY.md  SESSION_SUMMARY_PHASE_5.md  WHATS_NEW.md
docs/testing/: DASHBOARD_AND_TESTING_PLAN.md  TEST_PLAN_AND_CASES.md
frontend/: .dockerignore  .env.example  .eslintrc.json  .prettierignore  .prettierrc  Dockerfile  README.md  TEST_README.md  package-lock.json  package.json  vitest.config.ts
frontend/.next/: app-build-manifest.json  trace
frontend/.next/server/: _error.js  app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/__tests__/integration/: compliance-flow.test.tsx  document-analysis-flow.test.tsx
frontend/app/: layout.tsx  page.tsx
frontend/app/compliance/: page.tsx
frontend/app/rm/: page.tsx
frontend/components/: ErrorBoundary.test.tsx  ErrorBoundary.tsx
frontend/components/compliance/: KanbanBoardDnD.tsx  RiskScoreCard.test.tsx
frontend/components/dashboard/: AlertBanner.test.tsx  KPICard.test.tsx  (+2 more)
frontend/lib/: api.ts  config.ts  logger.test.ts  logger.ts  mock-data.ts  supabase.ts
frontend/test/: setup.ts  test-utils.tsx
(+126 files in other folders)
