[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for OCR and document parsing using Docling"
readme = "README.md"
authors = [
    { name = "issacj-17", email = "68261814+issacj-17@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    # FastAPI and server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # Pydantic
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",

    # Docling for OCR and document parsing
    "docling>=2.9.1",

    # Additional dependencies for document processing
    "Pillow>=10.4.0",
    "PyPDF2>=3.0.1",
    "python-docx>=1.1.2",

    # NLP and text analysis
    "spacy>=3.7.2",

    # Image analysis and forensics
    "numpy>=1.26.4",
    "scipy>=1.11.4",
    "imagehash>=4.3.1",

    # HTTP requests (for external APIs)
    "requests>=2.31.0",
    "httpx>=0.25.2",

    # Database (PostgreSQL with async support)
    "sqlalchemy[asyncio]>=2.0.23",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",

    # Cache (Redis with async support)
    "redis[hiredis]>=5.0.1",

    # Logging (Structured logging for audit trails)
    "structlog>=24.1.0",
    "python-json-logger>=2.0.7",

    # Testing
    "pytest>=8.4.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.4.0",
    "pytest-mock>=3.14.0",
    "faker>=37.0.0",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

# ===== RUFF CONFIGURATION =====
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.pyc",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ASYNC",  # flake8-async
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "PLR0913", # too many arguments to function call
    "PLR2004", # magic value used in comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG001",  # unused function arguments in tests
    "S101",    # use of assert in tests
    "PLR2004", # magic values in tests
]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ===== PYTEST CONFIGURATION =====
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",                           # verbose output
    "--strict-markers",             # ensure all markers are defined
    "--tb=short",                   # shorter traceback format
    "--cov=backend",                # coverage for backend package
    "--cov-report=term-missing",    # show missing lines in terminal
    "--cov-report=html",            # generate HTML coverage report
    "--cov-report=xml",             # generate XML coverage report (for CI)
    "--asyncio-mode=auto",          # auto detect async tests
    "--timeout=30",                 # test timeout in seconds
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "requires_model: Tests that require ML models",
]
asyncio_mode = "auto"
timeout = 30
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ===== COVERAGE CONFIGURATION =====
[tool.coverage.run]
source = ["src/backend"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/venv/*",
    "*/migrations/*",
    "*/__init__.py",
]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# ===== MYPY CONFIGURATION =====
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ===== BANDIT CONFIGURATION =====
[tool.bandit]
targets = ["src/backend"]
exclude_dirs = ["/tests", "/.venv", "/venv"]
tests = ["B201", "B301", "B302", "B303", "B304", "B305", "B306", "B307", "B308", "B309", "B310", "B311", "B312", "B313", "B314", "B315", "B316", "B317", "B318", "B319", "B320", "B321", "B323", "B324", "B325", "B401", "B402", "B403", "B404", "B405", "B406", "B407", "B408", "B409", "B410", "B411", "B412", "B413", "B501", "B502", "B503", "B504", "B505", "B506", "B507", "B601", "B602", "B603", "B604", "B605", "B606", "B607", "B608", "B609", "B610", "B611", "B701", "B702", "B703"]
skips = ["B101", "B601"]

# ===== ISORT CONFIGURATION =====
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
skip_gitignore = true
known_first_party = ["backend"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
